<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Registeration">

    <RelativeLayout
        android:layout_width="300dp"
        android:layout_height="400dp"
        android:layout_marginStart="5dp"
        android:layout_marginTop="164dp"
        android:layout_marginEnd="6dp"
        android:layout_marginBottom="167dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="UselessLeaf">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sign_up"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:textSize="30sp"
            android:textStyle="bold"
            android:id="@+id/header"/>

        <EditText
            android:layout_width="250sp"
            android:layout_height="wrap_content"
            android:id="@+id/emailReg"
            android:inputType="textEmailAddress"
            android:layout_below="@id/header"
            android:layout_centerHorizontal="true"
            android:hint="@string/email"
            tools:ignore="Autofill"
            android:layout_marginTop="30dp"/>

        <EditText
            android:layout_width="250sp"
            android:layout_height="wrap_content"
            android:id="@+id/passwordReg"
            android:inputType="textPassword"
            android:layout_below="@id/emailReg"
            android:layout_centerHorizontal="true"
            android:hint="@string/password"
            tools:ignore="Autofill"
            android:layout_marginTop="10dp"/>

        <EditText
            android:layout_width="250sp"
            android:layout_height="wrap_content"
            android:id="@+id/cnPasswordReg"
            android:inputType="textPassword"
            android:layout_below="@id/passwordReg"
            android:layout_centerHorizontal="true"
            android:hint="@string/confirm_password"
            tools:ignore="Autofill"
            android:layout_marginTop="10dp"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_below="@id/cnPasswordReg"
            android:text="@string/signUp"
            android:id="@+id/signUpBtnReg"
            android:layout_marginTop="20dp"
            android:background="#FA0B0B"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/already_user_sign_in"
            android:layout_below="@id/signUpBtnReg"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:id="@+id/signInReg"/>

    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>